k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-fff
  namespace: fnc-fff
spec:
  type: NodePort
  selector:
    app: front-fff
  ports:
    - port: 80
      targetPort: 3000
      nodePort: 30002
